--- a/Team1/Pipfile
+++ b/Team1/Pipfile
@@ -7,9 +7,10 @@ name = "pypi"
 jupyter = "*"
 pandas = "*"
 numpy = "*"
+matplotlib = "*"
 altair = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
